--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@analytics-debugger/ga4mp",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "An Open-Source Google Analytics 4 Client-Side Protocol Implementation",
-  "main": "dist/ga4mp.min.js",
+  "main": "dist/ga4mp.umd.min.js",
   "module": "dist/ga4mp.esm.min.js",
-  "browser": "dist/ga4mp.min.js",
+  "browser": "dist/ga4mp.umd.min.js",
   "devDependencies": {
     "jest": "^26.6.3"
   },
